fix firefox scrollbar width and style

--- a/src/styles/components/_columns.scss
+++ b/src/styles/components/_columns.scss
@@ -62,19 +62,6 @@
 .custom-scroll {
   overflow-y: auto;
   max-height: 75vh;
-}
-
-.custom-scroll::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 0.5rem rgba(0, 0, 0, 0.4);
-  background-color: rgba(255, 255, 255, 0.3);
-  margin-right: $margin-sm;
-}
-
-.custom-scroll::-webkit-scrollbar {
-  width: calc($width-sm / 2);
-}
-
-.custom-scroll::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 0.5rem rgba(0, 0, 0, 0.3);
-  background-color: rgba(0, 0, 0, 0.8);
+  scrollbar-width: thin;
+  scrollbar-color: rgba(0, 0, 0, 0.8) rgba(255, 255, 255, 0.3);
 }
